
[gd_scene format=3 load_steps=8 uid="uid://bxcwfhfwvk53n"]

[ext_resource type="Script" path="res://src/ui/ScreenManager.gd" id="1_main"]
[ext_resource type="Script" path="res://src/ui/BottomTabs.gd" id="2_tabs"]
[ext_resource type="PackedScene" path="res://scenes/ui/TopBar.tscn" id="3_topbar_new"]
[ext_resource type="Script" path="res://src/views/FishingView.gd" id="4_fishing"]
[ext_resource type="Script" path="res://src/views/PrestigeView.gd" id="5_prestige"]
[ext_resource type="Script" path="res://src/views/MarketView.gd" id="6_market"]
[ext_resource type="Script" path="res://src/views/UpgradesView.gd" id="7_upgrades"]
[ext_resource type="Script" path="res://src/views/MapView.gd" id="8_map"]

[node name="Main" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_main")

[node name="TopBar" parent="." instance=ExtResource("3_topbar_new")]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.08
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
custom_minimum_size = Vector2(0, 160)

[node name="ScreenContainer" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.9

[node name="FishingView" type="Control" parent="ScreenContainer"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_fishing")

[node name="Background" type="ColorRect" parent="ScreenContainer/FishingView"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.5, 0.8, 1)

[node name="WaterArea" type="Control" parent="ScreenContainer/FishingView"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.6

[node name="VisualEffectsLayer" type="Control" parent="ScreenContainer/FishingView/WaterArea"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GameplayArea" type="VBoxContainer" parent="ScreenContainer/FishingView"]
layout_mode = 1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0

[node name="QTEContainer" type="VBoxContainer" parent="ScreenContainer/FishingView/GameplayArea"]
layout_mode = 2
alignment = 1

[node name="QTELabel" type="Label" parent="ScreenContainer/FishingView/GameplayArea/QTEContainer"]
layout_mode = 2
text = "[   BARRA QTE   ]"
horizontal_alignment = 1

[node name="NeedleLabel" type="Label" parent="ScreenContainer/FishingView/GameplayArea/QTEContainer"]
layout_mode = 2
text = "(aguja)"
horizontal_alignment = 1

[node name="CastButton" type="Button" parent="ScreenContainer/FishingView/GameplayArea"]
layout_mode = 2
text = "LANZAR"
custom_minimum_size = Vector2(0, 60)

[node name="MarketView" type="Control" parent="ScreenContainer"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("6_market")

[node name="UpgradesView" type="Control" parent="ScreenContainer"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("7_upgrades")

[node name="MapView" type="Control" parent="ScreenContainer"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("8_map")

[node name="PrestigeView" type="Control" parent="ScreenContainer"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("5_prestige")

[node name="PrestigeLabel" type="Label" parent="ScreenContainer/PrestigeView"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
text = "‚≠ê Vista de Prestigio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomTabs" type="HBoxContainer" parent="."]
layout_mode = 1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
script = ExtResource("2_tabs")
layout_mode = 1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0

[node name="FishingBtn" type="Button" parent="BottomTabs"]
layout_mode = 2
text = "üêü Pescar"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 48)

[node name="MarketBtn" type="Button" parent="BottomTabs"]
layout_mode = 2
text = "üõí Mercado"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 48)

[node name="UpgradesBtn" type="Button" parent="BottomTabs"]
layout_mode = 2
text = "‚¨Ü Mejoras"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 48)

[node name="MapBtn" type="Button" parent="BottomTabs"]
layout_mode = 2
text = "üó∫ Mapa"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 48)

[node name="PrestigeBtn" type="Button" parent="BottomTabs"]
layout_mode = 2
text = "‚≠ê Prestigio"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 48)
